<resources>
    <string name="app_name">GB_calc</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="todo">TODO</string>
    <string name="c">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="result">""</string>
    <string name="input">""</string>
    <string name="empty">""</string>
    <string name="ErrorZeroDiv">"ERROR. cannot divide on zero!"</string>
    <string name="button_font">sans-serif-black</string>
    <string name="Back">Back</string>
</resources>