<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_top_margin"
        android:background="#FFFFFF"
        android:text="@string/result"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="@color/purple"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_top_margin"
        android:background="#FFFFFF"
        android:text="@string/input"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button2text_margin"
        android:text="@string/_7"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/purple"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:backgroundTint="@color/purple"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintBottom_toTopOf="@id/button5"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginTop="@dimen/button2text_margin"
        />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:backgroundTint="@color/purple"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toStartOf="@id/button_clear"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginTop="@dimen/button2text_margin"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/purple"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/purple"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button8"
        app:layout_constraintBottom_toTopOf="@id/button2"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:backgroundTint="@color/purple"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button9"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/purple"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/purple"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintBottom_toTopOf="@id/button0"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/purple"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/purple"
        app:layout_constraintEnd_toStartOf="@id/button_point"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintBottom_toTopOf="@id/button_equals"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:fontFamily="@string/button_font"
        android:gravity="center_horizontal"
        android:text="@string/point"
        android:textSize="@dimen/button_text"
        android:backgroundTint="@color/purple"
        app:layout_constraintBottom_toTopOf="@id/button_equals"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toStartOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/red"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toBottomOf="@id/textResult"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginTop="@dimen/button2text_margin"
        />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/button_clear"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/multiply"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        app:layout_constraintBottom_toTopOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"/>

    <Button
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/divide"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:textSize="@dimen/button_text"
        android:fontFamily="@string/button_font"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/button_point"
        app:layout_constraintStart_toStartOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        />



</androidx.constraintlayout.widget.ConstraintLayout>